Created ErrorPopupForm.RowTemplate1 and ErrorPopupForm; Edited settings and Form1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -3,6 +3,8 @@ unique_ids:
     standard-page.html: 6QKPF5SPTIB2AJDQ72DMWKALQCHC5E4U
     theme.css: YLYJSRFUKYFZHE4ZR7TGYT4UUAHREPFA
   forms:
+    ErrorPopupForm: '1747293541491979744099795.5918'
+    ErrorPopupForm.RowTemplate1: '1747294028401455524213292.7657'
     Form1: QCYJG2D63BNFCYYNS2D7C2BUEHIGYAJ5
   modules: {}
   scripts: {}
