--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,5 +1,11 @@
 components:
-- layout_properties: {slot: default}
+- components:
+  - event_bindings: {click: button_1_click}
+    layout_properties: {grid_position: 'EHGULN,BEYUSY'}
+    name: button_1
+    properties: {text: click}
+    type: Button
+  layout_properties: {slot: default}
   name: content_panel
   properties: {}
   type: ColumnPanel
