Created glMapping.RowTemplate3; Edited ErrorPopupForm.RowTemplate1, settings, Form1 and ErrorPopupForm

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -6,6 +6,10 @@ unique_ids:
     ErrorPopupForm: '1747293541491979744099795.5918'
     ErrorPopupForm.RowTemplate1: '1747294028401455524213292.7657'
     Form1: QCYJG2D63BNFCYYNS2D7C2BUEHIGYAJ5
+    glMapping: YE7ZYUVNXXXAZF4FW2XVDO72YIB2QGTR
+    glMapping.RowTemplate3: '1748262560403136851262181.20413'
+    glMapping.RowTemplate4: ZJ5XPNO2XLU56PHSKV77MNYZO5J4FQ6R
+    glMapping.RowTemplate4.RowTemplate2: 5BDFSRPFVHSZHE3VJ5DU5JSZJ3EEPJBE
   modules: {}
   scripts: {}
   server_modules: {}
